policies/tests/require-probes/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-probes-test
policies:
  - policy.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: require-probes
    rule: validate-probes
    resource: good-pod
    kind: Pod
    result: pass
  - policy: require-probes
    rule: validate-probes
    resource: bad-pod
    kind: Pod
    result: fail
